quartz/styles/icons.scss
@use "../static/icons/rpg-awesome/scss/rpg-awesome.scss";
@use "../static/icons/remixicon/fonts/remixicon.scss";
@use "../static/icons/lucide-static/font/lucide.scss";

@font-face {
	font-family: 'RPGAwesome';
	src: /*url('/static/icons/rpg-awesome/fonts/rpgawesome-webfont.woff') format('woff'),
		 url('/static/icons/rpg-awesome/fonts/rpgawesome-webfont.svg') format('svg'),
		 url('/static/icons/rpg-awesome/fonts/rpgawesome-webfont.ttf') format('truetype'),*/
		 url('./static/icons/rpg-awesome/fonts/rpgawesome-webfont.woff') format('woff'),
		 url('./static/icons/rpg-awesome/fonts/rpgawesome-webfont.svg') format('svg'),
		 url('./static/icons/rpg-awesome/fonts/rpgawesome-webfont.ttf') format('truetype');
}

@font-face {
	font-family: 'remixicon';
	src: /*url('/static/icons/remixicon/fonts/remixicon.woff2') format('woff2'),
		 url('/static/icons/remixicon/fonts/remixicon.woff') format('woff'),
		 url('/static/icons/remixicon/fonts/remixicon.ttf') format('truetype'),*/
		 url('./static/icons/remixicon/fonts/remixicon.woff2') format('woff2'),
		 url('./static/icons/remixicon/fonts/remixicon.woff') format('woff'),
		 url('./static/icons/remixicon/fonts/remixicon.ttf') format('truetype');
}

@font-face {
	font-family: 'lucide';
	src: /*url('/static/icons/lucide-static/font/lucide.woff2') format('woff2'),
		 url('/static/icons/lucide-static/font/lucide.woff') format('woff'),
		 url('/static/icons/lucide-static/font/lucide.ttf') format('truetype'),*/
		 url('./static/icons/lucide-static/font/lucide.woff2') format('woff2'),
		 url('./static/icons/lucide-static/font/lucide.woff') format('woff'),
		 url('./static/icons/lucide-static/font/lucide.ttf') format('truetype');
}

a.internal {
  align-items: center;
  padding: 0em 0.4em;
  border-radius: 4px;

  > *:first-child {
    margin-right: 0.25em;
  }
  
  .gi {
    position: relative;
    top: 2px;
  }

  i {
    display: inline-block !important;
    visibility: visible !important;
    opacity: 1 !important;
    width: 1em;
    height: 1em;
    margin-right: 0.25em;
    vertical-align: middle;
    background-color: transparent !important;
    position: relative;

    &.ra::before {
      position: relative;
      top: -1.5px;
    }

    &.ri::before {
      position: relative;
      top: -4.5px;
      left: 1px;
    }

    &.lucide {
      top: -4px;
    }
  }
}

.article-title .title-icon {
  margin-right: .75rem;
  font-size: 30px;
}

.explorer {
  .file-icon {
    i {
      display: inline-flex;
      align-items: center;
      justify-content: center;
      margin-right: 0.5rem;
      width: 1em;
      height: 1em;
      vertical-align: middle;
      position: relative;

      .lucide {
        top: 0px;
      }

      /*&.ri {
        top: 1px;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
      }*/
      
      top: -1px;
      right: -4px;
    }
    .gi {
      fill: currentColor;
      font-size: 1em;
      position: relative;
      top: -1.5px;
    }
  }
}

